<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    tools:context="com.example.thirdAndroidApp.RegisterPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Header Section -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="285dp">

            <!-- Background Image -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/register_background" />

            <!-- Registration Header Text -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:text="@string/login_heading_text"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <!-- Subheading Text -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginTop="240dp"
                android:layout_marginEnd="48dp"
                android:text="@string/login_subheading_text"
                android:textAlignment="center"
                android:textSize="14sp" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12dp">

            <!-- First Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address_hint"
                app:boxBackgroundColor="@android:color/white"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@android:color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:paddingTop="15dp"
                app:boxBackgroundColor="@android:color/white"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black"
                    android:drawableEnd="@drawable/baseline_remove_red_eye_24"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/register_button_background"
                android:text="@string/login_button_text"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:textAlignment="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/account"
                android:layout_margin="8dp"
                android:text="@string/switch_text"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/registerHere"
                android:text="@string/register_button"
                android:textAlignment="center"
                android:textColor="@color/yellow" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>