<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    tools:context="com.example.thirdAndroidApp.RegisterPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Header Section -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="285dp">

            <!-- Background Image -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/register_background" />

            <!-- Registration Header Text -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:text="@string/registration_heading_text"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <!-- Subheading Text -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginTop="240dp"
                android:layout_marginEnd="48dp"
                android:text="@string/registration_subheading_text"
                android:textAlignment="center"
                android:textSize="14sp" />
        </FrameLayout>

        <!-- Form Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12dp">

            <!-- First Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fnameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name_hint"
                app:boxBackgroundColor="@android:color/white"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@android:color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Last Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lnameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name_hint"
                app:boxBackgroundColor="@android:color/white"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@android:color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Email -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address_hint"
                app:boxBackgroundColor="@android:color/white"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/black" />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- Contact Number -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/contactNumberLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_number_hint"
                app:boxBackgroundColor="@android:color/white"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/contactNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textColor="@android:color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Date of Birth -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateOfBirthLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_of_birth_hint"
                app:boxBackgroundColor="@android:color/white"
                app:errorEnabled="true">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dateOfBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/baseline_calendar_month_24"
                    android:drawablePadding="8dp"
                    android:inputType="text"
                    android:textColor="@android:color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Country Spinner -->
            <Spinner
                android:id="@+id/countrySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="8dp"
                android:paddingTop="10dp"
                android:spinnerMode="dropdown" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray" />

            <!-- Gender Selection -->
            <TextView
                android:id="@+id/selectGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:paddingStart="8dp"
                android:paddingTop="15dp"
                android:paddingBottom="5dp"
                android:text="Select Gender" />


            <RadioGroup
                android:id="@+id/genderRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="Male"
                    app:buttonTint="@android:color/holo_orange_dark" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="Female"
                    app:buttonTint="@android:color/holo_orange_dark"  />

                <RadioButton
                    android:id="@+id/radioOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="Other"
                    app:buttonTint="@android:color/holo_orange_dark" />
            </RadioGroup>

            <View
                android:id="@+id/genderView"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/genderErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                android:paddingStart="15dp"
                android:textSize="12dp"/>

            <!-- Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:paddingTop="15dp"
                app:boxBackgroundColor="@android:color/white"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black"
                    android:drawableEnd="@drawable/baseline_remove_red_eye_24"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Confirm Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password_hint"
                app:boxBackgroundColor="@android:color/white"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black"
                    android:drawableEnd="@drawable/baseline_remove_red_eye_24"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Terms and Conditions Checkbox -->
            <CheckBox
                android:id="@+id/termsCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/accept_terms" />

            <TextView
                android:id="@+id/termsErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                android:paddingStart="15dp"
                android:textSize="12dp" />

            <!-- Register Button -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegister"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/register_button_background"
                android:text="@string/register_button_text"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
